BugFix: The text was overlapping on the main page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,12 +36,12 @@
 }
 
 #registration a {
-	opacity: 0.9;
-	filter: alpha(opacity=90);
+	opacity: 0.8;
+	filter: alpha(opacity=80);
 }
 
 #registration a:hover {
-	opacity: 1.0;
+	opacity: 1;
 	filter: alpha(opacity=100);
 }
 
@@ -74,10 +74,11 @@
 }
 
 #organizations div.organization {
+	overflow: hidden;
 	background: #dac9a8;
 	border: 1px solid #8c2727;
 	color: #8c2727;
-	line-height: 5px;
+	line-height: 1.5em;
 	margin: 10px;
 	padding: 10px;
 	width: 400px;
@@ -188,6 +189,7 @@ a:hover {
 
 a.link {
   opacity: 0.8;
+  filter: alpha(opacity=80);
   font-weight: bold;
   color: #331200;
 	background: #E4D5B7;
@@ -201,6 +203,7 @@ a.link {
 
 a.link:hover {
 	  opacity: 1;
+	  filter: alpha(opacity=100);
 }
 
 textarea {
